# pokedex

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  entrypoint.sh  liste_objets_pokemon.csv  manage.py  pyproject.toml  pytest.ini
authentication/: serializers.py  urls.py  views.py
config_files/: basic-docker.ini
pokedex/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
pokedex-back/: asgi.py  factories.py  fixtures.py  local_settings_example.py  settings.py  settings_docker_example.py  urls.py  wsgi.py
pokedex/management/commands/: import_csv.py
pokedex/migrations/: 0001_initial.py
pokedex/tests/: test_api.py  test_commands.py
pokemon/: IPokemon.py  admin.py  filters.py  models.py  pokemon_service.py  serializers.py  urls.py  views.py
pokemon/migrations/: 0001_initial.py  0002_rename_surname_pokemon_nickname.py  0003_pokemonpreferredobject.py  0004_pokemon_pokemon_object.py  0005_auto_20230317_1717.py  0006_alter_pokemon_pokemon_team.py
pokemon/tests/: test_api.py  test_models.py
pokemon_object/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
pokemon_object/management/commands/: import_pokemon_obj_csv.py
pokemon_object/migrations/: 0001_initial.py
